# agileforecasting

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README.txt  RUN_ME_FIRST.txt  SECURITY.md  VERSION.txt  apply_fix_agile_mc_import_and_init.py  make_upload_zip.py  pyproject.toml  requirements.txt  sitecustomize.py
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: WINDOWS_SETUP.md
scripts/: README.md  apply_calendar_overlap_fix_full.py  apply_fix_calendar_export_framed.py  apply_when_calendar_export_layout_and_metadata_patch.py  fix_chart_split_safe.py  fix_when_calendar_indentation_patch.py  make_repo_snapshot.py
src/agile_mc/: __init__.py  ado_client.py  ado_sync.py  app_logging.py  auth.py  calendar_export.py  chart_export.py  pat_store.py  plots.py  secure_store.py  simulation.py
streamlit_app/: app.py
tests/: test_ado_sync_parallel.py  test_ado_sync_utils.py  test_auth.py  test_calendar_layout.py  test_chart_export.py  test_simulation.py  test_windows_compat.py
