[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agile-mc"
version = "0.1.0"
description = "Agile Monte Carlo forecasting with Azure DevOps — Streamlit app"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.1",
    "numpy>=1.26",
    "requests>=2.31",
    "plotly>=5.18",
    "kaleido>=0.2.1",
    "cryptography>=42.0.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agile_mc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
